Fix: set high Navbar z-index to stop img overlap

--- a/src/styles/components/Navbar.module.css
+++ b/src/styles/components/Navbar.module.css
@@ -7,6 +7,7 @@
     background-color: #282c34;
     color: #ffffff;
     padding: 0 5vw 0 5vw;
+    z-index: 100;
 }
 
 #navbarList {
